# Scinoephile

./: .coverage  .gitignore  .gitmodules  AGENTS.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  README.yue-hans.md  README.yue-hant.md  README.zh-hans.md  README.zh-hant.md  add_pinyin.py  plan.md  pyproject.toml  requirements.txt  setup.py  test.py
.github/workflows/: build.yml
docs/: ARCHITECTURE.md  MIMO.md  Makefile  PROMPT_OPTIMIZATION.md  README.yue-hans.md  README.yue-hant.md  README.zh-hans.md  README.zh-hant.md  STYLE.md  THIRD_PARTY_NOTICES.md  base.rst  cltools.rst  conf.py  development.rst  draw_badges.py  index.rst  ocr.rst
docs/doctrees/: cltools.doctree  development.doctree  environment.pickle  foundations.doctree  index.doctree  ocr.doctree
docs/foundations/: subtitles.rst
docs/html/: .buildinfo  cltools.html  development.html  foundations.html  genindex.html  index.html  objects.inv  ocr.html  py-modindex.html  python.txt  search.html  searchindex.js  undoc.pickle
docs/ocr/: learning.rst  recognition.rst  segmentation.rst  subtitles.rst
docs/scripts/: update_helptext.py
scinoephile/: Compositor.py  Derasterizer.py  Extractor.py  HDF5Format.py  Metadata.py  SubtitleDataset.py  SubtitleEvent.py  SubtitleSeries.py  __init__.py  cantonese.py  mypy.ini  testing.py  translation.py
scinoephile.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scinoephile/analysis/: __init__.py  aligned_diff_audit.py  alignment.py  audit_utils.py  character_error_rate.py  character_error_rate_result.py  colored_diff.py  delineation_audit.py  gap_translation_audit.py  guided_review_audit.py  line_diff.py  line_diff_kind.py  ocr_fusion_audit.py  punctuation_audit.py  review_audit.py  series_diff.py  translation_audit.py
scinoephile/audio/: __init__.py  audio_block.py  audio_series.py  audio_subtitle.py  cleanup.py  hanzi_converter.py  speech_activity.py  transcribed_segment.py  transcriber.py  transcription_manager.py  transcription_payload.py
scinoephile/cantonese/: __init__.py
scinoephile/cli/: __init__.py  analysis_cer_cli.py  analysis_cli.py  analysis_diff_cli.py  argument_bundle_field_action.py  audit_cli.py  cmn_yue_cli.py  cmn_yue_dictionary_build_cli.py  cmn_yue_dictionary_cli.py  cmn_yue_dictionary_search_cli.py  compositor.py  conversion.py  dictionary_build_cli.py  dictionary_build_cli_base.py  dictionary_build_cuhk_cli.py  dictionary_build_gzzj_cli.py  dictionary_cli.py  dictionary_search_cli.py  eng_cli.py  eng_fuse_cli.py  eng_zho_cli.py  eng_zho_sync_cli.py  extract_cli.py  llms.py  process_cli.py  proofread_cli.py  review_cli.py  scinoephile_cli.py  sync_cli.py  timewarp_cli.py  transcribe_cli.py  translate_cli.py  web.py  yue_cli.py  yue_transcribe_cli.py  zho_cli.py  zho_fuse_cli.py
scinoephile/common/: __init__.py  argument_parsing.py  command_line_interface.py  csv.py  described_enum.py  duration.py  exception.py  exceptions.py  file.py  general.py  logs.py  subprocess.py  testing.py  validation.py
scinoephile/core/: Base.py  CLToolBase.py  StdoutLogger.py  SubtitleEvent.py  SubtitleSeries.py  __init__.py  bilingual.py  block.py  blocks.py  cantonese.py  cli.py  cltools.py  english.py  exceptions.py  general.py  hanzi.py  language.py  mandarin.py  misc.py  ml.py  models.py  optimization.py  pairs.py  paths.py  providers.py  romanization.py  series.py  stacking.py  subtitle.py  subtitle_series.py  subtitles.py  synchronization.py  testing.py  text.py  timing.py  validation.py
scinoephile/data/: README.md  README.rst
scinoephile/dictionaries/: __init__.py  dictionary_source.py  dictionary_tool_prompt.py  dictionary_tools.py  lookup.py  serialization.py
scinoephile/documentation/: __init__.py
scinoephile/image/: __init__.py  base64.py  bbox.py  bbox_manager.py  bboxes.py  char_pair.py  colors.py  drawing.py  image_series.py  image_subtitle.py  max_gap_manager.py  ocr.py  sup.py  upscale.py  upscaling.py  validation.py  validation_manager.py  whitespace_manager.py
scinoephile/lang/: __init__.py  block_review.py  language_id.py  ocr_fusion.py  review.py  romanization.py
scinoephile/legacy/: Compositor.py  Derasterizer.py  Metadata.py  testing.py
scinoephile/llms/: __init__.py  default_test_cases.py  prompt_definition.py
scinoephile/mcp/: __init__.py  cuhk_dictionary_server.py
scinoephile/media/: __init__.py  audio.py  constants.py  probe.py  subtitles.py  video_offset.py
scinoephile/multilang/: __init__.py  pairs.py  synchronization.py  translation.py
scinoephile/ocr/: AutoTrainer.py  CharacterExtractor.py  GeneratedOCRDataset.py  ImageSubtitleDataset.py  ImageSubtitleEvent.py  ImageSubtitleSeries.py  LabeledOCRDataset.py  Model.py  ModelTrainer.py  OCRDataset.py  OCRTestDataset.py  OCRTrainDataset.py  Reader.py  SUPFormat.py  TestDataCollector.py  TestOCRDataset.py  TrainOCRDataset.py  TrainingDataGenerator.py  UnlabeledOCRDataset.py  __init__.py  numba.py
scinoephile/open_ai/: __init__.py  functions.py  openai_provider.py  openai_service.py  subtitle_series_response.py  sync_group_notes_response.py  sync_notes_response.py
scinoephile/openai/: __init__.py  openai_provider.py  openai_service.py
scinoephile/optimization/: __init__.py  operations.py  prompt_spec.py  prompt_specs.py
scinoephile/scripts/: compositor.py  update_badges.py  (+1 more)
scripts/: conda_scinoephile.ps1  conda_scinoephile.sh  setup_git_hooks.ps1  setup_git_hooks.sh  update_readme.py  uv.ps1  uv.sh
test/: .coverage  .coveragerc  __init__.py  clean.py  conftest.py  cuhk_scrape_smoke.py  fixtures.py  helpers.py  pytest_helpers.py  test_Compositor.py  test_ImageSubtitle.py  test_OCRRecognition.py  test_OCRSegmentation.py  test_Subtitle.py  test_audit_style.py  test_data_srt.py  test_hdf5.py  test_miscellaneous.py  test_module_hierarchy.py  test_old.py  test_optional_dependencies.py  test_package_data.py  test_package_hierarchy.py  test_project_metadata.py  test_srt.py  test_style.py  test_sup.py
zysyzm/: CLToolBase.py  CompilationManager.py  Compositor.py  ExtractionManager.py  SubtitleManager.py  __init__.py  generate.py  zysyzm.py
(+2984 files in other folders)
