[project]
name = "scinoephile"
version = "0.1.0"
description = ""
authors = [
    { name = "Karl Debiec", email = "karl.t.debiec@gmail.com" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "audioop-lts>=0.2.2",
    "ffmpeg-python>=0.2.0",
    "jieba>=0.42.1",
    "numba>=0.63.1",
    "numpy>=2.3.5",
    "onnxruntime>=1.23.2",
    "openai>=2.14.0",
    "opencc>=1.1.9",
    "pillow>=12.0.0",
    "pycantonese>=3.4.0",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "pysubs2>=1.8.0",
    "pytest-asyncio>=1.3.0",
    "setuptools>=80.9.0",
    "torch>=2.9.1",
    "torchaudio>=2.9.1",
    "transformers>=4.57.3",
    "whisper-timestamped>=1.15.9",
]

[project.scripts]
scinoephile = "scinoephile.cli.scinoephile_cli:ScinoephileCli.main"

[dependency-groups]
dev = [
    "black>=25.12.0",
    "pyright>=1.1.407",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.14.10",
    "ty>=0.0.2",
]

[tool.black]
line-length = 88
target-version = ['py313']

[tool.isort]
profile = 'black'

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "NPY", # numpy-specific rules
    "PERF", # perflint
    "PL", # pylint
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D410", # Missing blank line after section
    "D411", # Missing blank line before section
    "PLR2004" # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.setuptools]
packages = { find = { include = ["scinoephile*"] } }

[tool.uv]
package = true
