[project]
name = "scinoephile"
version = "0.1.0"
description = ""
authors = [
    { name = "Karl Debiec", email = "karl.t.debiec@gmail.com" }
]
license = "BSD-3-Clause"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "audioop-lts>=0.2.2",
    "beautifulsoup4>=4.14.3",
    "ffmpeg-python>=0.2.0",
    "hkscs-unicode-converter>=1.1.0",
    "jieba>=0.42.1",
    "numba>=0.64.0",
    "numpy>=2.4.3",
    "onnxruntime>=1.24.4",
    "openai>=2.31.0",
    "opencc>=1.2.0",
    "pillow>=12.1.1",
    "pycantonese>=4.1.0",
    "pydantic>=2.13.2",
    "pydub>=0.25.1",
    "pypinyin>=0.55.0",
    "pysubs2>=1.8.1",
    "pytest-asyncio>=1.3.0",
    "requests>=2.33.1",
    "setuptools>=82.0.1",
    "torch>=2.10.0",
    "torchaudio>=2.11.0",
    "transformers>=5.5.4",
    "whisper-timestamped>=1.15.9",
]

[project.scripts]
scinoephile = "scinoephile.cli.scinoephile_cli:ScinoephileCli.main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-xdist>=3.8.0",
    "ruff>=0.15.7",
    "ty>=0.0.31",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
log_cli = true
log_cli_level = "INFO"

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = [
    "D", # pydocstyle
    "E", # pycodestyle
    "F", # pyflakes
    "I", # isort
    "N", # pep8-naming
    "NPY", # numpy-specific rules
    "PERF", # perflint
    "PL", # pylint
    "UP", # pyupgrade
    "W", # pycodestyle
]
ignore = [
    "D410", # Missing blank line after section
    "D411", # Missing blank line before section
    "PLR0913", # Too many arguments in function definition
    "PLR2004" # Magic value used in comparison
]

[tool.ruff.lint.pydocstyle]
convention = 'google'

[tool.setuptools]
packages = { find = { include = ["scinoephile*"] } }

[tool.uv]
package = true
